Fix icon cell size - no stretching

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -18,7 +18,7 @@
 
 #grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(128px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
   column-gap: 20px;
 }
 
